# mini-forum

./: .gitignore  Cargo.toml  README.md
src/: main.rs  project.rs  urls.rs
src/forum/: admin.rs  forms.rs  init.rs  mod.rs  models.rs  records.rs  urls.rs
src/forum/migrations/: 0001  init.rs
src/forum/topic/: views.rs
src/forum/topic/templates/: destroy.rs.html  index.rs.html  login.rs.html  new.rs.html  show.rs.html
src/forum/topic/templates/.parsed/: base.in  destroy.in  edit.in  index.in  login.in  show.in
src/http_errors/templates/.parsed/: not_found.in
