[package]
name = "mini-forum"
version = "0.4.1"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "A simple example of a forum built with Anansi."
repository = "https://github.com/saru-tora/mini-forum"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anansi = { path = "../anansi/anansi" , version = "0.4.1" }
async-trait = "0.1.57"
