[package]
name = "mini-forum"
version = "0.6.0"
edition = "2021"
authors = ["sarutora"]
license = "MIT"
description = "A simple example of a forum built with Anansi."
repository = "https://github.com/saru-tora/mini-forum"
readme = "README.md"

[dependencies]
anansi = { path = "../anansi/anansi" , version = "0.6.0", features = ["sqlite", "redis"] }
async-trait = "0.1.57"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
